--- a/src/os2datascanner/projects/static/scss/_vars.scss
+++ b/src/os2datascanner/projects/static/scss/_vars.scss
@@ -71,6 +71,7 @@
   --border-radius-small: 0.125rem;
   --border-radius-widget: 1.25rem;
   --border-radius-filter: 0.625rem;
+  --border-radius-info: 0.250rem;
   --border-radius-sensitivity: 20px 0px 0px 20px;
 
   //box-shadow
