[#57627] Allow creation of regular aliases through account detail and multiple improvements to UI and functionality
[#57627] Make account detail look the same in admin and report module

[#57627] Remove useless constraint

[#57627] Removed select2 styling

[#57627] Create remediator aliases when copying scannerjob

[#57627] Consolidate duplicate code in scanner views on parent view

[#57627] Move duplicate code in scanner view post method to parent method

[#57627] Move User-Organization authentication logic to utility function, add tests

[#57627] Refactor and cleanup of account views

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/common/breadcrumb.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/common/breadcrumb.html
@@ -102,7 +102,8 @@
 
     <i id="chevron_right" class="material-icons">chevron_right</i>
 
-    <a href="{% url "accounts" organization.slug %}" class="link-color">{% trans "accounts"|capfirst %}</a>
+    <a href="{% url "accounts" account.organization.slug %}"
+       class="link-color">{% trans "accounts"|capfirst %}</a>
 
     <i id="chevron_right" class="material-icons">chevron_right</i>
 
