--- a/src/os2datascanner/projects/report/reportapp/templates/mail/overview.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/mail/overview.html
@@ -35,7 +35,7 @@
     <p>Dear {{ full_name }},</p>
     <p>
       There are currently <strong>{{ user_alias_bound_results }}</strong> results in
-      the OS2datascanner system which are associated with you and require your attention.
+      the OSdatascanner system which are associated with you and require your attention.
     </p>
 
     <table>
@@ -67,14 +67,14 @@
     </p>
 
     <p>
-      <a href="{{ report_login_url }}">Log into OS2datascanner with your
+      <a href="{{ report_login_url }}">Log into OSdatascanner with your
         organisation account</a> for further details.
       </p>
 
       <p>
         Kind regards,
         <br>
-        the OS2datascanner system
+        the OSdatascanner system
         {% if institution %}(on behalf of {{ institution }}){% endif %}
       </p>
     </body>
