--- a/src/os2datascanner/projects/report/reportapp/templates/mail/overview.da.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/mail/overview.da.html
@@ -35,7 +35,7 @@
     <p>Hej {{ full_name }},</p>
     <p>
       Der ligger i øjeblikket <strong>{{ user_alias_bound_results }}</strong> resultater i
-      OS2datascanner-systemet med direkte tilknytning til dig, der kræver din opmærksomhed.
+      OSdatascanner-systemet med direkte tilknytning til dig, der kræver din opmærksomhed.
     </p>
 
     <table>
@@ -67,14 +67,14 @@
     </p>
 
     <p>
-      <a href="{{ report_login_url }}">Log på OS2datascanner med din
+      <a href="{{ report_login_url }}">Log på OSdatascanner med din
         organisationskonto</a> for at se flere detaljer.
       </p>
 
       <p>
         Med venlig hilsen,
         <br>
-        OS2datascanner-systemet
+        OSdatascanner-systemet
         {% if institution %}(på vegne af {{ institution }}){% endif %}
       </p>
     </body>
